Auditoria e correção: mapeamento das classes `nacional/classes/nfsenacional` vs XSD oficial (v1.01) (#62)
* Correção mapeamento "procEmi" e enum tipoEmissao

* Mapemeanto xsd

* Mapeamento xsd

* Retirando acoplamento classe NFSeConfig para String

* Removendo codigo comentado morto

* Auditoria e correção: mapeamento das classes
`nacional/classes/nfsenacional` vs XSD oficial (v1.01)

* Auditoria e correção: mapeamento das classes
`nacional/classes/nfsenacional` vs XSD oficial (v1.01)

* Correção tipo dado BigDecimal

* Padrao lowerCamelCase

* Padrao lowerCamelCase

* Padrao lowerCamelCase

* merge

* NFSeSefinNacionalVDescCondIncond campos vDescIncond e vDescCon opcional

* Set default time zone to America/Sao_Paulo in NFSeObjectMapper - data
hora emissao nfse vinha com 3h adiantado

* Set DPS elemento como required

* Fix cObra element requirement

* Disable automatic date adjustment to context time zone

* Deprecate geraCadeiaCertificados method in favor of direct password
usage

* Fix NFSeUtilsTest to update event ID format and remove disabled
annotation

* Refactor to Java 17

* Update project metadata and change group ID to marcoslombardi

* [maven-release-plugin] [skip ci] prepare release nfse-1.0.52

* [maven-release-plugin] [skip ci] prepare for next development iteration

* fix: restaura metadados t3wv e fecha httpclient

- Restaura groupId, url, scm, developers, repositório do GitHub Packages e formato de tag (v@{project.version}) do projeto t3wv, removendo o localCheckout do release
- Troca source/target por release no compilador, garantindo que o build falhe ao usar API posterior ao Java 17
- Remove o parâmetro optimize (depreciado) e define o encoding UTF-8 do build
- Fecha o HttpClient em NFSeHttpClient e WSSaoJose quando o runtime suportar (Java 21+), mantendo compatibilidade com Java 17
- Remove o valor padrão "1.00" do atributo versao em NFSe e Evento

---------

Co-authored-by: Diego Fincatto <58352+fincatto@users.noreply.github.com>
Co-authored-